# matchbook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_main.cpp
bindings/: py_matchbook.cpp
include/matchbook/: itch_book_builder.hpp  itch_parser.hpp  level_bitmap.hpp  matching_engine.hpp  mold_udp64.hpp  pool.hpp  spsc_ring.hpp  types.hpp
include/matchbook/strategy/: avellaneda_stoikov.hpp  rl_quoter.hpp
tests/: test_bindings.py  test_engine.cpp
tools/: itchgen_main.cpp  mcast_main.cpp  mmsim_main.cpp  replay_main.cpp
